Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-9466

No stacktrace on crash on Windows, if mysqld is running as service

Details

    Description

      Does not work for me on Windows 10 (don't have another windows to check)
      An easy way to reproduce is to inject a crash by using debug break intrinsic, e.g in function sleep(), like below, then start mysqld.exe * as service*, then call SELECT SLEEP(1) from the client.

      diff --git a/sql/item_func.cc b/sql/item_func.cc
      index 52575a8..5c3c396 100644
      --- a/sql/item_func.cc
      +++ b/sql/item_func.cc
      @@ -4610,7 +4610,7 @@ longlong Item_func_sleep::val_int()
         mysql_cond_t cond;
         double timeout;
         int error;
      -
      +  __debugbreak();
         DBUG_ASSERT(fixed == 1);
       
         timeout= args[0]->val_real();

      Attachments

        Activity

          Guess it could have been broken here https://github.com/MariaDB/server/commit/44ea4e7c1f90f80ab5cf55f435856acca7a176db
          write(STDERR_FILENO, ...) seems wrong, as there is a freopen() done in mysqld.cc.

          wlad Vladislav Vaintroub added a comment - Guess it could have been broken here https://github.com/MariaDB/server/commit/44ea4e7c1f90f80ab5cf55f435856acca7a176db write(STDERR_FILENO, ...) seems wrong, as there is a freopen() done in mysqld.cc.

          People

            wlad Vladislav Vaintroub
            wlad Vladislav Vaintroub
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.